# allocator

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
allocator/: all.html  enum.AllocError.html  index.html  struct.AllocatorRc.html  struct.BitmapPageAllocator.html  struct.BuddyByteAllocator.html  struct.SlabByteAllocator.html  struct.TlsfByteAllocator.html  trait.BaseAllocator.html  trait.ByteAllocator.html  trait.IdAllocator.html  trait.PageAllocator.html  type.AllocResult.html
benches/: collections.rs
search.desc/allocator/: allocator-desc-0-.js
search.index/: 19385ac07220.js  1a79c5a7523b.js  241defed300a.js  25a4347b2cfa.js  287ff534a38d.js  2badab97ecbf.js  409619e2f6d0.js  472548931177.js  494d76b4b6d1.js  4b642117bc55.js  57922196db82.js  76409ad438ac.js  root.js
search.index/crateNames/: 86d9734cd86d.js
search.index/desc/: f387c1b5c750.js
search.index/entry/: 3f115b908fff.js  74cd6a292a17.js
search.index/function/: 9219753f9507.js  da7d9cb6bbca.js
search.index/generic_inverted_index/: 2014afd4e20d.js  9dcfed80d89e.js
search.index/name/: 3166299b7ba3.js  ff014c43102a.js
search.index/normalizedName/: 1286fb7b9f65.js  4ce39d355e8f.js
search.index/path/: 83d7ba6bafb2.js  def6e9b20a14.js
search.index/type/: 879f5eb3eb83.js  f1929a5e4f81.js
src/: bitmap.rs  buddy.rs  lib.rs  slab.rs  tlsf.rs
src/allocator/: bitmap.rs.html  buddy.rs.html  lib.rs.html  slab.rs.html  tlsf.rs.html
tests/: allocator.rs
trait.impl/allocator/: trait.BaseAllocator.js
(+13 files in other folders)
